Jekyll theme fix

--- a/_posts/2023-07-07-template.md
+++ b/_posts/2023-07-07-template.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title:  "Inception Movie"
-author: john
+title:  "Template"
+author: domas
 categories: [ Jekyll, tutorial ]
 tags: [red, yellow]
 image: assets/images/11.jpg
@@ -18,6 +18,14 @@ Review products, books, movies, restaurant and anything you like on your Jekyll 
 It's actually really simple! Add the rating in your YAML front matter. It also supports halfs:
 
 ```html
+<html>
+    <head>
+    </head>
+    <body>
+        <b>
+            <a href="fdfg">fdfg</a>
+            </b>
+            </body>
 ---
 layout: post
 title:  "Inception Movie"
