Updated navbar Updated posts

--- a/_posts/2023-07-08-welcome.md
+++ b/_posts/2023-07-08-welcome.md
@@ -4,14 +4,14 @@ title:  "Welcome!"
 author: domas
 categories: [Jekyll, tutorial]
 tags: [red, yellow]
-image: assets/images/11.jpg
+image: assets/images/mercedes-1.jpg
 description: "Welcome page of this website"
 featured: true
 hidden: false
 rating:
 ---
 
-Concept cars is a website with everything you need to know about them.
+Everything you need to know about this website
 
 ## „Why concept cars?“
 
