Updated tags, categories Updated "jumbotron" image

--- a/_posts/2023-07-08-welcome.md
+++ b/_posts/2023-07-08-welcome.md
@@ -2,8 +2,8 @@
 layout: post
 title:  "Welcome!"
 author: domas
-categories: [Jekyll, tutorial]
-tags: [red, yellow]
+categories: [Welcome]
+tags: [Welcome]
 image: assets/images/mercedes-1.jpg
 description: "Welcome page of this website"
 featured: true
