--- a/_posts/2023-07-07-template.md
+++ b/_posts/2023-07-07-template.md
@@ -2,8 +2,8 @@
 layout: post
 title:  "Template"
 author: domas
-categories: [ Jekyll, tutorial ]
-tags: [red, yellow]
+categories: [Jekyll, Tutorial]
+tags: [template]
 image: assets/images/11.jpg
 description: "My review of Inception movie. Acting, plot and something else in this short description."
 featured: true
