Added post "Nissan GT-R"

--- a/src/_posts/2023-07-08-welcome.md
+++ b/src/_posts/2023-07-08-welcome.md
@@ -6,8 +6,8 @@ categories: [Welcome]
 tags: [Welcome]
 image: assets/images/mercedes-1.jpg
 description: "Welcome page of this website"
-featured: true
-hidden: false
+featured: false
+hidden: true
 rating:
 ---
 
