Added 2 new posts Updated navbar Fixed docker not real-time updating page issue

--- a/src/_posts/2023-07-08-welcome.md
+++ b/src/_posts/2023-07-08-welcome.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title:  "Welcome!"
+title: "Welcome!"
 author: domas
-categories: [Welcome]
-tags: [Welcome]
+categories:
+tags:
 image: assets/images/mercedes-1.jpg
 description: "Welcome page of this website"
 featured: false
