--- a/src/_posts/2023-07-07-template.md
+++ b/src/_posts/2023-07-07-template.md
@@ -1,12 +1,12 @@
 ---
 layout: post
-title:  "Template"
+title: "Template"
 author: domas
-categories: [Jekyll, Tutorial]
-tags: [template]
+categories: []
+tags: []
 image: assets/images/11.jpg
 description: "My review of Inception movie. Acting, plot and something else in this short description."
-featured: true
+featured: false
 hidden: true
 rating: 3.5
 ---
