Cleaned up posts Updated author config

--- a/src/_posts/2023-07-08-welcome.md
+++ b/src/_posts/2023-07-08-welcome.md
@@ -4,8 +4,8 @@ title: "Welcome!"
 author: domas
 categories:
 tags:
-image: assets/images/mercedes-1.jpg
-description: "Welcome page of this website"
+image: assets/images/welcome.jpg
+description:
 featured: false
 hidden: true
 rating:
