--- a/src/_posts/2023-07-07-template.md
+++ b/src/_posts/2023-07-07-template.md
@@ -4,8 +4,8 @@ title: "Template"
 author: domas
 categories: []
 tags: []
-image: assets/images/11.jpg
-description: "My review of Inception movie. Acting, plot and something else in this short description."
+image: assets/images/template.jpg
+description:
 featured: false
 hidden: true
 rating: 3.5
