Added post "skoda-superb"

--- a/src/_posts/2023-07-08-nissan-gtr-r35.md
+++ b/src/_posts/2023-07-08-nissan-gtr-r35.md
@@ -3,7 +3,7 @@ layout: post
 title: "The edgy GT-R"
 author: domas
 categories: [Nissan, Iconic]
-tags: [GT-R]
+tags: [Sports]
 image: assets/images/nissan/gtr-r35/nissan-1.jpg
 description:
 featured: true
