Added a credit to photo authors

--- a/src/_posts/2023-07-08-nissan-gtr-r35.md
+++ b/src/_posts/2023-07-08-nissan-gtr-r35.md
@@ -2,6 +2,7 @@
 layout: post
 title: "The edgy GT-R"
 author: domas
+featured-photo-source: topgear.com
 categories: [Nissan, Iconic]
 tags: [Sports]
 image: assets/images/nissan/gtr-r35/nissan-1.jpg
