--- a/src/_posts/2023-07-07-template.md
+++ b/src/_posts/2023-07-07-template.md
@@ -2,6 +2,7 @@
 layout: post
 title: "Template"
 author: domas
+featured-photo-source: 
 categories: []
 tags: []
 image: assets/images/template.jpg
