--- a/src/_posts/2023-07-08-welcome.md
+++ b/src/_posts/2023-07-08-welcome.md
@@ -2,6 +2,7 @@
 layout: post
 title: "Welcome!"
 author: domas
+featured-photo-source: mercedes-benz.com
 categories:
 tags:
 image: assets/images/welcome.jpg
