--- a/src/_posts/2023-07-08-nissan-gtr-r35.md
+++ b/src/_posts/2023-07-08-nissan-gtr-r35.md
@@ -22,7 +22,10 @@ I'm just amazed by the courage of Nissan. Even I couldn't have thought that 2001
 
 Nissan made the GT-R prototype really close to what it is today, but maybe slightly more edged and, well, „Concept-looking.“ Nobody really thought that this would or *will* be a real car anytime soon, as cars in 2001 (what I'm calling, the „Round car era“) were pretty different to what was presented in the Tokyo Motor Show. Fast-forward to 2007, and there we have it!
 
-<img src="{{ site.baseurl }}/assets/images/nissan/gtr-r35/nissan-2.jpg" class="featured-image img-fluid">
+<div class="photo-credit">
+    <img src="{{ site.baseurl }}/assets/images/nissan/gtr-r35/nissan-2.jpg" class="featured-image img-fluid">
+    <a>Photo B: Comparison. Source of the photo at the left side: supercars.net, at the right side: autocar.co.uk</a>
+</div>
 
 #### The car we all love (...now)
 
