Updated welcome page

--- a/src/_posts/2023-07-08-welcome.md
+++ b/src/_posts/2023-07-08-welcome.md
@@ -30,4 +30,5 @@ Generally speaking, information about concept cars, their origins and mass produ
 
 ## „Where do I start?“
 
-You can browse through car [**categories**]({{ site.github.url }}/categories) or search them by [**tags**]({{ site.github.url }}/tags).
+You can browse through car [**categories**]({{ site.github.url }}/categories), search them by [**tags**]({{ site.github.url }}/tags) or go to the [**homepage**]({{ site.github.url }}/). Maybe there you'll find something.\
+I don't know what else to say. I guess all I can say is *happy browsing*!
