--- a/src/_posts/2023-07-08-nissan-gtr-r35.md
+++ b/src/_posts/2023-07-08-nissan-gtr-r35.md
@@ -9,7 +9,7 @@ image: assets/images/nissan/gtr-r35/nissan-1.jpg
 description:
 featured: true
 hidden: false
-rating: 4.5
+rating: 4
 ---
 
 „Just. Wow.“ - my first thought just looking at GT-R's prototype.
@@ -24,7 +24,7 @@ Nissan made the GT-R prototype really close to what it is today, but maybe sligh
 
 <div class="photo-credit">
     <img src="{{ site.baseurl }}/assets/images/nissan/gtr-r35/nissan-2.jpg" class="featured-image img-fluid">
-    <a>Photo B: Comparison. Source of the photo at the left side: supercars.net, at the right side: autocar.co.uk</a>
+    <p>Comparison. Left photo source: supercars.net, right photo source: autocar.co.uk</p>
 </div>
 
 #### The car we all love (...now)
