Fixed posts' dates Updated posts themselves

--- a/src/_posts/2023-07-06-welcome.md
+++ b/src/_posts/2023-07-06-welcome.md
@@ -14,6 +14,10 @@ rating:
 
 Everything you need to know about this website
 
+## „What are these concept cars in general?“
+
+Concept cars are made to showcase new styling and technology. They are often exhibited at motor shows to see how customer reacts to the new and radical design changes which may or may not be mass-produced.
+
 ## „Why concept cars?“
 
 ### Here's why:
