Added a note for what car it is under car photos

--- a/src/_posts/2023-07-08-nissan-gtr-r35.md
+++ b/src/_posts/2023-07-08-nissan-gtr-r35.md
@@ -24,7 +24,7 @@ Nissan made the GT-R prototype really close to what it is today, but maybe sligh
 
 <div class="photo-credit">
     <img src="{{ site.baseurl }}/assets/images/nissan/gtr-r35/nissan-2.jpg" class="featured-image img-fluid">
-    <p>Comparison. Left photo source: supercars.net, right photo source: autocar.co.uk</p>
+    <p>Comparison. Left photo - concept. Source: supercars.net, right photo - real car. Source: autocar.co.uk</p>
 </div>
 
 #### The car we all love (...now)
