Updated post description

--- a/src/_posts/2023-07-08-nissan-gtr-r35.md
+++ b/src/_posts/2023-07-08-nissan-gtr-r35.md
@@ -12,7 +12,7 @@ hidden: false
 rating: 4
 ---
 
-„Just. Wow.“ - my first thought just looking at GT-R's prototype.
+„Just. Wow.“ - my first thought just from looking at GT-R's prototype.
 
 #### Why am I so surprised?
 
